--- a/Desktop/PROYECTOS/Ej_bootstrap/estilos.css
+++ b/Desktop/PROYECTOS/Ej_bootstrap/estilos.css
@@ -4,7 +4,7 @@
 }
 
  .justify-content-center {
-    background: #13a00c;
+    background: #0ca085;
     position: fixed;
     top: 0;
     width: 100%;
