cambio a turquesa mas oscuro en bootstrap header

--- a/Desktop/PROYECTOS/Ej_bootstrap/estilos.css
+++ b/Desktop/PROYECTOS/Ej_bootstrap/estilos.css
@@ -4,7 +4,7 @@
 }
 
  .justify-content-center {
-    background: #0ca085;
+     background: #1a6b5c; color /*turquesa mas oscuro */
     position: fixed;
     top: 0;
     width: 100%;
